# codecrafters-kafka-rust

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/metadata/: mod.rs
src/metadata/records/: mod.rs  partition_record.rs  topic_record.rs
src/model/: mod.rs
src/protocol/: error.rs  mod.rs
src/protocol/message/: api_versions.rs  describe_topic_partitions.rs  mod.rs  request_header.rs  response_header.rs
src/protocol/message/fetch/: mod.rs  request.rs  response.rs
src/protocol/message/fetch/tests/: mod.rs
src/protocol/type/: array.rs  mod.rs  numeric.rs  string.rs  tagged_fields.rs
